tests/NormalTests/paczka2/big_fuzzy/65372152.err
Error in line 4: MMae8 S636 36,52
Error in line 6: 96ldHaa75L A697 38,3
Error in line 11: JqBfSB A891 50,4
Error in line 10: 96ldHaa75L A891 31,6
Error in line 3: MMae8 S636 27,4
Error in line 28: JqBfSB A891 76,0
Error in line 34: JqBfSB A697 90,7
Error in line 33: 96ldHaa75L S676 69,4
Error in line 36: 96ldHaa75L A891 36,3
Error in line 41: 96ldHaa75L A697 24,2
Error in line 37: S676 A891 34,5
Error in line 51: MMae8 A697 96,9
Error in line 56: 96ldHaa75L S636 34,2
Error in line 67: 96ldHaa7L S676 220,6
Error in line 61: 96ldHaa75L S676 81,7
Error in line 65: kKGhA4XXzI A697 19,4
Error in line 68: JqBfSB A891 94,8
Error in line 77: JqBfSB S676 52,4
Error in line 84: MMae8 A697 96,3
Error in line 96: kKGhA4XXzI S636 23,4
Error in line 110: S676 S636 0,4
Error in line 120: JqBfSB S636 89,7
Error in line 103: kKGhA4XXzI A891 11,6
Error in line 132: 72eI A697 811,1
Error in line 146: JqBfSB A697 12,9
Error in line 145: kKGhA4XXzI S636 46,7
Error in line 136: 96ldHaa75L A697 0,0
Error in line 151: kKGhA4XXzI A697 58,9
Error in line 155: Lo7qYZfq A697 44,3
Error in line 167: MMae8 S636 237,0
Error in line 175: Lo7qYZfq A891 368,2
Error in line 173: 72eI A697 68,0
Error in line 177: MMae8 A891 2,6
Error in line 192: kKGhA4XXzI S636 13,2
Error in line 188: Lo7qYZfq A891 100,0
Error in line 199: Lo7qYZfq S636 29,6
Error in line 210: Lo7qYZfq A891 7\,1
Error in line 211: MMae8 A891 62,0
Error in line 209: Lo7qYZfq S676 10,6
Error in line 226: Lo7qYZfq A697 33,3
Error in line 230: Lo7qYZfq S676 83,4
Error in line 228: kKGhA4XXzI S676 97,1
Error in line 232: Lo7qYZfq A891 66,6
Error in line 236: Lo7qYZfq A697 72,8
Error in line 229: JqBfSB A697 4,2
Error in line 246: 72eI S636 68,2
Error in line 247: 72eI A891 28,1
